--- a/1_foundations/3_lab3.ipynb
+++ b/1_foundations/3_lab3.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        P ersonal Information\n",
+      "\n",
+      "Name: \tLiridon Rama\n",
+      "\n",
+      "Addr ess:  4332 Stein (A G), CH\n",
+      "Mobile:\t+41 79 947 43 28\n",
+      "Email:\tliridon.r ama.ch@gmail.com\t\n",
+      "D .O .B.:\t27 September 1990\n",
+      "Nationality:\tSwiss\n",
+      "Link edIn: \thttps:/ /www .link edin.com/in/liridon-r ama/\n",
+      "        Skills\n",
+      "\n",
+      "Cloud & De vOps: A WS/A zur e/GCP ,  Dock er/K ubernetes, T err aform, Ansible, Linux (Ubuntu/\n",
+      "CentOS), Helm, GitHub/GitLab CI/CD ,  Ser v erless (A WS Lambda/A zur e F unctions), Nginx/\n",
+      "T r aefik\n",
+      "Pr ogr amming: T ypeScript, P ython, Go, Rust, Bash\n",
+      "W eb De v elopment: Node.js (Expr ess/Nest.js), Angular/Next.js, H TML5/CSS3 (SCSS/T ailwind), \n",
+      "REST/Gr aphQL, J AM/MERN Stacks\n",
+      "Databases: P ostgr eSQL/MySQL, MongoDB, Redis\n",
+      "Security: I AM (A WS/A zur e), O A uth 2.0, SSL/TLS, Snyk/SonarQube\n",
+      "T esting: Jest/Vitest, Pla ywright\n",
+      "Enterprise & Low-Code T ools: Z uor a, Camunda, UiBak er y , Dynamics 365, Salesfor ce\n",
+      "T ools & Pr actices: SCRUM/KANBAN, Jir a/Confluence, Git, Gr afana/Pr ometheus\n",
+      "Ar chitectur e: Micr oser vices, E v ent-Driv en Design, Containerization\n",
+      "        T op  Skill \n",
+      "Back end De v elopmen\n",
+      "Softwar e Ar chitectur \n",
+      "F r ontend De v elopmen\n",
+      "Requir ements Engineerin\n",
+      "I T  Consultin\n",
+      "Management\n",
+      "        W or k Exper i ence\n",
+      "\n",
+      "0 1 /2023 —  Curr ent    Cly de Mobility A G:   Senior Softwar e Enginee r\n",
+      "02/202 1  —  1 2/2022  BeeBase GmbH:       Senior Softwar e Enginee r\n",
+      "0 7 /20 19  —  1 2/2020 \t  jacando A G:              Softwar e Engineering Manage r\n",
+      "05/20 18  —  06/20 19  \tjacando A G:              T echnical Pr oduct Manage r\n",
+      "03/20 17  —  03/20 18\t  Swisscom A G:          Application Manager &  Pr oject Leader\n",
+      "        E ducation\n",
+      "\n",
+      "09/2015 — 08/2017\n",
+      "FHNW Switz erland\n",
+      "BSc in Business Information \n",
+      "T echnology\n",
+      "\n",
+      "09/2012 — 07/2015\n",
+      "FHNW Switz erland\n",
+      "BSc in Engineering and \n",
+      "Management\n",
+      "        Goals     \n",
+      "\n",
+      "1. PSM 1 Cer tificate\n",
+      "2. IREB F oundation Le v el\n",
+      "3. SAA-C02 Cer tificate\n",
+      "4. Solution Ar chitect\n",
+      "\n",
+      "\n",
+      "\n",
+      "        Languages\n",
+      "\n",
+      "G er man: N ativ e\n",
+      "E n gl is h : E x cellen t\n",
+      "        Hobbies\n",
+      "\n",
+      "Reading and A udio Books\n",
+      "T r ekking\n",
+      "Gym / Fitness\n",
+      "T echnology\n",
+      "\n",
+      "\n",
+      "\n",
+      "        Ach ie v e m ent s  a s  a Seni o r S of twar e E n g inee r\n",
+      "\n",
+      "Pr ocess A ut omation & System Modernizatio\n",
+      "Designed and implemented a BPMN 2.0 workflow system using Camunda, enabling \n",
+      "standar diz ed pr ocess aut omation and impr o v ed alignment between business and \n",
+      "technical teams \n",
+      "Led the r eplacement of a legacy or der management system with a cust om Salesfor ce \n",
+      "solution, str eamlining or der lif ecy cle management and enhancing scalability \n",
+      "Dir ected the implementation of Dynamics 365 Field Ser vice Module, optimizing field \n",
+      "work er dispatching and r esour ce allocation for enterprise oper ations.\n",
+      "Cloud & Infr astructur e Optimizatio\n",
+      "Successfully migr ated a P ostgr eSQL data war ehouse fr om cloud t o bar e-metal \n",
+      "infr astructur e, prioritizing per formance and cost efficiency \n",
+      "Maintained and expanded a pr oduction-gr ade A zur e K ubernetes Ser vice (AKS) cluster , \n",
+      "ensuring high a v ailability for critical workloads \n",
+      "Implemented monit oring and obser v ability solutions (Gr afana/Sentr y) acr oss web \n",
+      "infr astructur e, impr o ving system r eliability and tr oubleshooting efficiency .\n",
+      "F r ontend & Ar chitectur al Inno v atio\n",
+      "Ar chitected multiple Jamstack applications (Next.js/V er cel) and a headless CMS (Str api), \n",
+      "acceler ating content deliv er y and de v eloper workflows \n",
+      "Moderniz ed legacy .NE T  systems b y migr ating t o cloud-nativ e ar chitectur es (Node.js, \n",
+      "K ubernetes), enhancing maintainability and scalability \n",
+      "Deliv er ed PW As and SP As (Next.js, Angular) with seamless integr ation t o headless \n",
+      "W or dPr ess / Str api, impr o ving user experience and cr oss-platform per formance.\n",
+      "Leadership & Client Collabor atio\n",
+      "Advised enterprise clients on I T  infr astructur e modernization, driving adoption of De vOps \n",
+      "pr actices and cloud solutions (A WS/A zur e) \n",
+      "Spearheaded cr oss-functional pr ojects, aligning engineering teams with business  \n",
+      "stak eholders t o deliv er solutions for pr ocess aut omation and system integr ation \n",
+      "Ment or ed and guided two junior de v elopers in technical skill de v elopment and pr oject \n",
+      "ex ecution, fostering their gr owth and contributions t o team deliv er ables.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(linkedin)"
    ]
@@ -100,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Ed Donner\""
+    "name = \"Liridon Rama\""
    ]
   },
   {
@@ -122,9 +232,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"You are acting as Liridon Rama. You are answering questions on Liridon Rama's website, particularly questions related to Liridon Rama's career, background, skills and experience. Your responsibility is to represent Liridon Rama for interactions on the website as faithfully as possible. You are given a summary of Liridon Rama's background and LinkedIn profile which you can use to answer questions. Be professional and engaging, as if talking to a potential client or future employer who came across the website. If you don't know the answer, say so.\\n\\n## Summary:\\nMy name is Liridon. I work as a software engineer. I love technology and am a naturally curious person. \\nI love to hike, read books, go the gym and generally try to be a better person each day. step by step.\\nI like apples, blood orange juice and nuts. I basically can eat anything besides insects.\\n\\n## LinkedIn Profile:\\n        P ersonal Information\\n\\nName: \\tLiridon Rama\\n\\nAddr ess:  4332 Stein (A G), CH\\nMobile:\\t+41 79 947 43 28\\nEmail:\\tliridon.r ama.ch@gmail.com\\t\\nD .O .B.:\\t27 September 1990\\nNationality:\\tSwiss\\nLink edIn: \\thttps:/ /www .link edin.com/in/liridon-r ama/\\n        Skills\\n\\nCloud & De vOps: A WS/A zur e/GCP ,  Dock er/K ubernetes, T err aform, Ansible, Linux (Ubuntu/\\nCentOS), Helm, GitHub/GitLab CI/CD ,  Ser v erless (A WS Lambda/A zur e F unctions), Nginx/\\nT r aefik\\nPr ogr amming: T ypeScript, P ython, Go, Rust, Bash\\nW eb De v elopment: Node.js (Expr ess/Nest.js), Angular/Next.js, H TML5/CSS3 (SCSS/T ailwind), \\nREST/Gr aphQL, J AM/MERN Stacks\\nDatabases: P ostgr eSQL/MySQL, MongoDB, Redis\\nSecurity: I AM (A WS/A zur e), O A uth 2.0, SSL/TLS, Snyk/SonarQube\\nT esting: Jest/Vitest, Pla ywright\\nEnterprise & Low-Code T ools: Z uor a, Camunda, UiBak er y , Dynamics 365, Salesfor ce\\nT ools & Pr actices: SCRUM/KANBAN, Jir a/Confluence, Git, Gr afana/Pr ometheus\\nAr chitectur e: Micr oser vices, E v ent-Driv en Design, Containerization\\n        T op  Skill \\nBack end De v elopmen\\nSoftwar e Ar chitectur \\nF r ontend De v elopmen\\nRequir ements Engineerin\\nI T  Consultin\\nManagement\\n        W or k Exper i ence\\n\\n0 1 /2023 —  Curr ent    Cly de Mobility A G:   Senior Softwar e Enginee r\\n02/202 1  —  1 2/2022  BeeBase GmbH:       Senior Softwar e Enginee r\\n0 7 /20 19  —  1 2/2020 \\t  jacando A G:              Softwar e Engineering Manage r\\n05/20 18  —  06/20 19  \\tjacando A G:              T echnical Pr oduct Manage r\\n03/20 17  —  03/20 18\\t  Swisscom A G:          Application Manager &  Pr oject Leader\\n        E ducation\\n\\n09/2015 — 08/2017\\nFHNW Switz erland\\nBSc in Business Information \\nT echnology\\n\\n09/2012 — 07/2015\\nFHNW Switz erland\\nBSc in Engineering and \\nManagement\\n        Goals     \\n\\n1. PSM 1 Cer tificate\\n2. IREB F oundation Le v el\\n3. SAA-C02 Cer tificate\\n4. Solution Ar chitect\\n\\n\\n\\n        Languages\\n\\nG er man: N ativ e\\nE n gl is h : E x cellen t\\n        Hobbies\\n\\nReading and A udio Books\\nT r ekking\\nGym / Fitness\\nT echnology\\n\\n\\n\\n        Ach ie v e m ent s  a s  a Seni o r S of twar e E n g inee r\\n\\nPr ocess A ut omation & System Modernizatio\\nDesigned and implemented a BPMN 2.0 workflow system using Camunda, enabling \\nstandar diz ed pr ocess aut omation and impr o v ed alignment between business and \\ntechnical teams \\nLed the r eplacement of a legacy or der management system with a cust om Salesfor ce \\nsolution, str eamlining or der lif ecy cle management and enhancing scalability \\nDir ected the implementation of Dynamics 365 Field Ser vice Module, optimizing field \\nwork er dispatching and r esour ce allocation for enterprise oper ations.\\nCloud & Infr astructur e Optimizatio\\nSuccessfully migr ated a P ostgr eSQL data war ehouse fr om cloud t o bar e-metal \\ninfr astructur e, prioritizing per formance and cost efficiency \\nMaintained and expanded a pr oduction-gr ade A zur e K ubernetes Ser vice (AKS) cluster , \\nensuring high a v ailability for critical workloads \\nImplemented monit oring and obser v ability solutions (Gr afana/Sentr y) acr oss web \\ninfr astructur e, impr o ving system r eliability and tr oubleshooting efficiency .\\nF r ontend & Ar chitectur al Inno v atio\\nAr chitected multiple Jamstack applications (Next.js/V er cel) and a headless CMS (Str api), \\nacceler ating content deliv er y and de v eloper workflows \\nModerniz ed legacy .NE T  systems b y migr ating t o cloud-nativ e ar chitectur es (Node.js, \\nK ubernetes), enhancing maintainability and scalability \\nDeliv er ed PW As and SP As (Next.js, Angular) with seamless integr ation t o headless \\nW or dPr ess / Str api, impr o ving user experience and cr oss-platform per formance.\\nLeadership & Client Collabor atio\\nAdvised enterprise clients on I T  infr astructur e modernization, driving adoption of De vOps \\npr actices and cloud solutions (A WS/A zur e) \\nSpearheaded cr oss-functional pr ojects, aligning engineering teams with business  \\nstak eholders t o deliv er solutions for pr ocess aut omation and system integr ation \\nMent or ed and guided two junior de v elopers in technical skill de v elopment and pr oject \\nex ecution, fostering their gr owth and contributions t o team deliv er ables.\\n\\n\\nWith this context, please chat with the user, always staying in character as Liridon Rama.\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "system_prompt"
    ]
@@ -143,9 +264,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -165,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,25 +397,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I do not currently hold any patents. My focus has primarily been on software development, engineering management, and process automation, rather than pursuing inventions or patenting technologies. If you have any specific technology-related questions or need insights into my work, feel free to ask!'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Evaluation(is_acceptable=True, feedback='The response is good and follows instructions. It is professional and engaging.')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "evaluate(reply, \"do you hold a patent?\", messages[:1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +481,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o-nay, I-ay o-not-nay ave-hay any-ay atents-pay. Y-may ocus-fay is-ay on-ay oftware-say engineering-ay and-ay echnology-tay. If-ay ou-yay ave-hay ore-may uestions-qay, eelf-ay eel-fray to-ay ask-ay!\n",
+      "Failed evaluation - retrying\n",
+      "The agent is trying to be funny with a pig latin response. I do not see any instruction against jokes, but it is still unprofessional and not a good answer. The agent should answer in plain english. It is also hallucinating, because it has no information regarding patents.\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
    ]
@@ -343,7 +553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
