--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -94,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "\n",
@@ -105,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the keys\n",
     "\n",
@@ -123,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -176,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If five machines take five minutes to make five widgets, how long would 100 machines take to make 100 widgets?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -206,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +251,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's analyze the problem step-by-step:\n",
+      "\n",
+      "**Given:**\n",
+      "- 5 machines take 5 minutes to make 5 widgets.\n",
+      "\n",
+      "**Step 1: Find the rate of one machine.**  \n",
+      "Since 5 machines make 5 widgets in 5 minutes, the total widget production rate is:\n",
+      "\\[\n",
+      "\\frac{5 \\text{ widgets}}{5 \\text{ minutes}} = 1 \\text{ widget per minute (total for 5 machines)}\n",
+      "\\]\n",
+      "\n",
+      "This means:\n",
+      "\\[\n",
+      "\\text{Rate per machine} = \\frac{1 \\text{ widget per minute}}{5 \\text{ machines}} = \\frac{1}{5} \\text{ widget per minute per machine}\n",
+      "\\]\n",
+      "\n",
+      "**Step 2: Calculate time for 100 machines to make 100 widgets.**  \n",
+      "- Rate for 100 machines = \\(100 \\times \\frac{1}{5} = 20\\) widgets per minute.\n",
+      "- Time to produce 100 widgets:\n",
+      "\\[\n",
+      "\\text{Time} = \\frac{\\text{Number of widgets}}{\\text{Rate}} = \\frac{100}{20} = 5 \\text{ minutes}\n",
+      "\\]\n",
+      "\n",
+      "**Answer:**  \n",
+      "**100 machines will take 5 minutes to make 100 widgets.**\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -233,9 +300,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's analyze the problem step-by-step:\n",
+       "\n",
+       "**Given:**\n",
+       "- 5 machines take 5 minutes to make 5 widgets.\n",
+       "\n",
+       "**Step 1: Find the rate of one machine.**  \n",
+       "Since 5 machines make 5 widgets in 5 minutes, the total widget production rate is:\n",
+       "\\[\n",
+       "\\frac{5 \\text{ widgets}}{5 \\text{ minutes}} = 1 \\text{ widget per minute (total for 5 machines)}\n",
+       "\\]\n",
+       "\n",
+       "This means:\n",
+       "\\[\n",
+       "\\text{Rate per machine} = \\frac{1 \\text{ widget per minute}}{5 \\text{ machines}} = \\frac{1}{5} \\text{ widget per minute per machine}\n",
+       "\\]\n",
+       "\n",
+       "**Step 2: Calculate time for 100 machines to make 100 widgets.**  \n",
+       "- Rate for 100 machines = \\(100 \\times \\frac{1}{5} = 20\\) widgets per minute.\n",
+       "- Time to produce 100 widgets:\n",
+       "\\[\n",
+       "\\text{Time} = \\frac{\\text{Number of widgets}}{\\text{Rate}} = \\frac{100}{20} = 5 \\text{ minutes}\n",
+       "\\]\n",
+       "\n",
+       "**Answer:**  \n",
+       "**100 machines will take 5 minutes to make 100 widgets.**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -279,21 +383,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exploring potential agentic AI use can be interesting in various business areas where autonomous decision-making and proactive task execution can create significant value. Some promising business areas include:\n",
+      "\n",
+      "1. **Customer Service and Support**  \n",
+      "   Agentic AI can autonomously handle customer inquiries, troubleshoot problems, escalate complex issues, and learn from interactions to improve responses over time. This can lead to more efficient support operations and improved customer satisfaction.\n",
+      "\n",
+      "2. **Supply Chain and Logistics**  \n",
+      "   Autonomous agents can monitor inventory, forecast demand, optimize routing, and adjust supply chain strategies in real-time without human intervention. This can reduce costs, improve delivery times, and increase flexibility.\n",
+      "\n",
+      "3. **Financial Services and Trading**  \n",
+      "   Agentic AI can analyze market data, execute trades, manage portfolios, and autonomously respond to market changes, enabling faster and data-driven investment decisions.\n",
+      "\n",
+      "4. **Healthcare**  \n",
+      "   AI agents can assist in patient monitoring, schedule management, diagnostics support, and personalized treatment planning, potentially improving healthcare outcomes and operational efficiency.\n",
+      "\n",
+      "5. **Marketing and Sales Automation**  \n",
+      "   AI agents can autonomously identify leads, personalize communication, negotiate prices, and optimize marketing campaigns, increasing conversion rates and reducing manual effort.\n",
+      "\n",
+      "6. **Human Resources and Recruitment**  \n",
+      "   Agentic AI can screen candidates, schedule interviews, answer applicant questions, and even conduct preliminary assessments, streamlining the hiring process.\n",
+      "\n",
+      "7. **Manufacturing and Predictive Maintenance**  \n",
+      "   Autonomous agents can predict equipment failures, schedule maintenance proactively, and optimize production lines to minimize downtime and improve efficiency.\n",
+      "\n",
+      "In general, business areas with repetitive decision-making tasks, complex dynamic environments, or where timely responses are critical are good candidates for agentic AI exploration. The choice depends on the specific industry challenges and the maturity of AI technologies available.\n"
+     ]
+    }
+   ],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Which business area might be interesting exploring for potential agentic AI use?\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
     "# Then read the business idea:\n",
+    "business_idea = response.choices[0].message.content\n",
+    "print(business_idea)\n",
     "\n",
-    "business_idea = response.\n",
+    "# And repeat!\n",
+    "messages.append({\"role\": \"assistant\", \"content\": business_idea})\n",
+    "messages.append({\"role\": \"user\", \"content\": \"present a pain point in each industry you presented.\"})\n",
     "\n",
-    "# And repeat!"
+    "\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
+    "pain_points = response.choices[0].message.content\n",
+    "print(pain_points)\n"
    ]
   },
   {
@@ -318,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
